# openai-to-z-capstone

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  MAKE_APPEND_MARAJO.txt  Makefile  NOTICE  PR_BODY_AOI_MAKE.md  PR_BODY_TESTS.md  PR_DESCRIPTION_RAT.md  README.md  README_SECTION_MARAJO.md  codex_bootstrap_prompt.txt  pyproject.toml  requirements-extra.txt  requirements.txt
.github/workflows/: ci.yml
abstract/: abstract.md
config/: aoi_marajo.json
data/candidates/: marajo_hotspots_scores.csv  marajo_hotspots_topN.csv  marajo_hotspots_topN.geojson  marajo_selection_santarem.json
docs/: BRIEF_RAT_EN.md  BRIEF_RAT_PT.md  ETHICS.md  METHODS_CHECKLIST_RAT.md
logs/: evidence_log.jsonl
notebooks/: 01_checkpoint1.ipynb  02_checkpoint2.ipynb  10_ALOS2_seasonal_composites.ipynb  11_GEDI_L4C_WSCI_extraction.ipynb
prompts/: checkpoint1_user_prompt.md  system_prompt.md
release/: ABSTRACT_200w.md  RELEASE_NOTES.md  REPRODUCE.md
reports/: README.md  marajo-delta-0001.md
scripts/: gedi_wsci_extract.py  gee_alos2_seasonal_composites.js  make_marajo_figure.py  make_writeup_stub.py  move_downloads_to_exports.sh  new_candidate.py  run_marajo_pipeline.py
src/zexplorer/: __init__.py  anomaly.py  data_id_logger.py  geoutils.py
tests/: test_geoutils.py  test_logger.py
writeup/: WRITEUP_TEMPLATE.md
