
[project]
name = "zexplorer"
version = "0.1.0"
description = "Self-guided capstone inspired by OpenAI to Z Challenge"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310","py311","py312"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E203","E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
